cli/tests/snapshots/pipeline_negative__pipeline_negative_unsafe_copy_instance_interior_mutable.snap
---
source: cli/tests/pipeline_negative.rs
expression: output
---
Status: Ok
Diagnostics:
- Warning: Axiom 'interior_mutable' declared (unsafe: interior_mutable)
- Warning: Axiom 'may_panic_on_borrow_violation' declared (unsafe: may_panic_on_borrow_violation)
- Warning: Axiom 'concurrency_primitive' declared (unsafe: concurrency_primitive)
- Warning: Axiom 'atomic_primitive' declared (unsafe: atomic_primitive)
- Warning: Axiom 'indexable' declared (unsafe: indexable)
- Warning: Inductive 'RefCell' depends on axioms: may_panic_on_borrow_violation (unsafe: may_panic_on_borrow_violation)
- Error: [K0031] Error registering Copy instance: Explicit Copy instance for interior-mutable inductive 'RefCell' is not allowed
